# oop

task1/: task1_oop.cpp
task2/: CMakeLists.txt  Makefile  main.cpp  tests.cpp
task2/oop2/: CMakeLists.txt
task2/oop2/include/: oop2.h
task2/oop2/src/: oop2.cpp
task4/: CMakeLists.txt  main.cpp
task4/oop4/: CMakeLists.txt
task4/oop4/include/: oop4.h
task4/oop4/src/: oop4.cpp
task5/: oop5.cpp
task6/: CMakeLists.txt  main.cpp  tests.cpp
task6/oop6/: CMakeLists.txt
task6/oop6/include/: oop6.h
task6/oop6/src/: oop6.cpp
